# FFmpeg_C-CodecDemo

Android/AudioDecoding/Yochi_FFmpeg_AudioDecoding/app/: CMakeLists.txt  build.gradle
Android/AudioDecoding/Yochi_FFmpeg_AudioDecoding/app/src/main/: AndroidManifest.xml
Android/AudioDecoding/Yochi_FFmpeg_AudioDecoding/gradle/wrapper/: gradle-wrapper.properties
Android/AudioEncoding/Yochi_FFmpeg_AudioEncode/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Android/AudioEncoding/Yochi_FFmpeg_AudioEncode/app/src/androidTest/java/yochi/com/yochi_ffmpeg_audioencode/: ExampleInstrumentedTest.java
Android/AudioEncoding/Yochi_FFmpeg_AudioEncode/app/src/main/: AndroidManifest.xml
Android/AudioEncoding/Yochi_FFmpeg_AudioEncode/app/src/main/cpp/: native-lib.cpp
Android/AudioEncoding/Yochi_FFmpeg_AudioEncode/app/src/main/java/yochi/com/yochi_ffmpeg_audioencode/: MainActivity.java
Android/AudioEncoding/Yochi_FFmpeg_AudioEncode/app/src/main/res/layout/: activity_main.xml
Android/AudioEncoding/Yochi_FFmpeg_AudioEncode/app/src/main/res/values/: strings.xml
Android/AudioEncoding/Yochi_FFmpeg_AudioEncode/app/src/test/java/yochi/com/yochi_ffmpeg_audioencode/: ExampleUnitTest.java
Android/AudioEncoding/Yochi_FFmpeg_AudioEncode/gradle/wrapper/: gradle-wrapper.properties
Android/VideoDecoding/Yochi_VideoDecoding/app/: CMakeLists.txt  build.gradle
Android/VideoDecoding/Yochi_VideoDecoding/app/src/main/: AndroidManifest.xml
Android/VideoDecoding/Yochi_VideoDecoding/gradle/wrapper/: gradle-wrapper.properties
Android/VideoEncoding/Yochi_FFmpeg_VideoEncoding/app/: CMakeLists.txt  build.gradle
Android/VideoEncoding/Yochi_FFmpeg_VideoEncoding/gradle/wrapper/: gradle-wrapper.properties
iOS/AudioDecoding/Yochi_FFmpeg_AudioDecoding/Yochi_FFmpeg_AudioDecoding/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
iOS/AudioDecoding/Yochi_FFmpeg_AudioDecoding/Yochi_FFmpeg_AudioDecoding.xcodeproj/: project.pbxproj
iOS/AudioDecoding/Yochi_FFmpeg_AudioDecoding/Yochi_FFmpeg_AudioDecoding.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/AudioDecoding/Yochi_FFmpeg_AudioDecoding/Yochi_FFmpeg_AudioDecoding/Yochi_FFmpeg_AudioDecoding/: Yochi_FFmpeg_AudioDecoding.h  Yochi_FFmpeg_AudioDecoding.m
iOS/AudioDecoding/Yochi_FFmpeg_AudioDecoding/Yochi_FFmpeg_AudioDecodingTests/: Yochi_FFmpeg_AudioDecodingTests.m
iOS/AudioEncoding/Yochi_FFmpeg_AudioEncode/Yochi_FFmpeg_AudioEncode/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
iOS/AudioEncoding/Yochi_FFmpeg_AudioEncode/Yochi_FFmpeg_AudioEncode.xcodeproj/: project.pbxproj
iOS/AudioEncoding/Yochi_FFmpeg_AudioEncode/Yochi_FFmpeg_AudioEncode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/AudioEncoding/Yochi_FFmpeg_AudioEncode/Yochi_FFmpeg_AudioEncode/Yochi_FFmpeg_AudioEncode/: FFmpegAudioEncode.h  FFmpegAudioEncode.m
iOS/AudioEncoding/Yochi_FFmpeg_AudioEncode/Yochi_FFmpeg_AudioEncodeTests/: Yochi_FFmpeg_AudioEncodeTests.m
iOS/VideoDecoding/Yochi_VideoDecoding/Yochi_VideoDecoding/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
iOS/VideoDecoding/Yochi_VideoDecoding/Yochi_VideoDecoding.xcodeproj/: project.pbxproj
iOS/VideoDecoding/Yochi_VideoDecoding/Yochi_VideoDecoding.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/VideoDecoding/Yochi_VideoDecoding/Yochi_VideoDecoding/FFmpegVideoDecoding/: FFmpegVideoDecoding.h  FFmpegVideoDecoding.m
iOS/VideoDecoding/Yochi_VideoDecoding/Yochi_VideoDecodingTests/: Yochi_VideoDecodingTests.m
iOS/VideoEncoding/Yochi_FFmpeg_VideoEncoding/Yochi_FFmpeg_VideoEncoding/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
iOS/VideoEncoding/Yochi_FFmpeg_VideoEncoding/Yochi_FFmpeg_VideoEncoding.xcodeproj/: project.pbxproj
iOS/VideoEncoding/Yochi_FFmpeg_VideoEncoding/Yochi_FFmpeg_VideoEncoding.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/VideoEncoding/Yochi_FFmpeg_VideoEncoding/Yochi_FFmpeg_VideoEncoding/FFmpegVideoEncoding/: FFmpegVideoEncoding.h  FFmpegVideoEncoding.m
iOS/VideoEncoding/Yochi_FFmpeg_VideoEncoding/Yochi_FFmpeg_VideoEncodingTests/: Yochi_FFmpeg_VideoEncodingTests.m
(+43 files in other folders)
